add css to hide survey results and finish survey results section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <p>Your favorite food is: <span class="favoritefood"></span></p>
       <p>Your favorite subject is <span class="favoritesubject"></span></p>
-      <p>Your birthdate is: </p>
+      <p>Your birthdate is: <span class="birthdate"></span></p>
     </div>
   </div>
 </body>
