create jquery calls to access all input types and display them

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="form-group">
           <label for="favoritecolor">What is your favorite color?</label>
-          <input type="color" id="favoritenumber" class="form-control">
+          <input type="color" id="favoritecolor" class="form-control">
         </div>
         <div class="form-group">
           <label for="favoritefood">Pick a food</label>
@@ -58,9 +58,9 @@
       </form>
     </div>
     <div class="survey-results">
-      <p>Your favorit number is: <span class="favoritenumber"></span></p>
+      <p>Your favorite number is: <span class="favoritenumber"></span></p>
       <p>Your favorite color is</p>
-      <div class="favorite-color">
+      <div class="favoritecolor">
       </div>
       <p>Your favorite food is: <span class="favoritefood"></span></p>
       <p>Your favorite subject is <span class="favoritesubject"></span></p>
