--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
       <form id="formOne" class="col-xs-3">
         <div class="form-group">
           <label for="favoritenumber">What is your favorite number?</label>
-          <input type="number" id="favoritenumber" class="form-control">
+          <input type="number" id="favoritenumber" class="form-control" required>
         </div>
         <div class="form-group">
           <label for="favoritecolor">What is your favorite color?</label>
-          <input type="color" id="favoritecolor" class="form-control">
+          <input type="color" id="favoritecolor" class="form-control" required>
         </div>
         <div class="form-group">
           <label for="favoritefood">Pick a food</label>
@@ -39,7 +39,7 @@
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="favoritesubject" value="english">
+              <input type="radio" name="favoritesubject" value="english" >
               English
             </label>
           </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="form-group">
           <label for="dateofbirth"> What date were you born?</label>
-          <input type="date" id="dateofbirth" class="form-control">
+          <input type="date" id="dateofbirth" class="form-control" required>
         </div>
         <button type="submit" class="btn">Submit</button>
       </form>
